--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,62 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <!-- Material 3 Dynamic Color System -->
 
-    <!-- Material Design 3 Light Theme Colors -->
-    <color name="md_theme_light_primary">#6750A4</color>
+    <!-- Primary Brand Colors -->
+    <color name="md_theme_light_primary">#006A6A</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
-    <color name="md_theme_light_primaryContainer">#EADDFF</color>
-    <color name="md_theme_light_onPrimaryContainer">#21005D</color>
-    <color name="md_theme_light_secondary">#625B71</color>
-    <color name="md_theme_light_onSecondary">#FFFFFF</color>
-    <color name="md_theme_light_secondaryContainer">#E8DEF8</color>
-    <color name="md_theme_light_onSecondaryContainer">#1D192B</color>
-    <color name="md_theme_light_tertiary">#7D5260</color>
-    <color name="md_theme_light_onTertiary">#FFFFFF</color>
-    <color name="md_theme_light_tertiaryContainer">#FFD8E4</color>
-    <color name="md_theme_light_onTertiaryContainer">#31111D</color>
-    <color name="md_theme_light_error">#BA1A1A</color>
-    <color name="md_theme_light_onError">#FFFFFF</color>
-    <color name="md_theme_light_errorContainer">#FFDAD6</color>
-    <color name="md_theme_light_onErrorContainer">#410002</color>
-    <color name="md_theme_light_background">#FFFBFE</color>
-    <color name="md_theme_light_onBackground">#1C1B1F</color>
-    <color name="md_theme_light_surface">#FFFBFE</color>
-    <color name="md_theme_light_onSurface">#1C1B1F</color>
-    <color name="md_theme_light_surfaceVariant">#E7E0EC</color>
-    <color name="md_theme_light_onSurfaceVariant">#49454F</color>
-    <color name="md_theme_light_outline">#79747E</color>
-    <color name="md_theme_light_outlineVariant">#CAC4D0</color>
+    <color name="md_theme_light_primaryContainer">#9CF2F2</color>
+    <color name="md_theme_light_onPrimaryContainer">#001F1F</color>
 
-    <!-- Material Design 3 Dark Theme Colors -->
-    <color name="md_theme_dark_primary">#D0BCFF</color>
-    <color name="md_theme_dark_onPrimary">#381E72</color>
-    <color name="md_theme_dark_primaryContainer">#4F378B</color>
-    <color name="md_theme_dark_onPrimaryContainer">#EADDFF</color>
-    <color name="md_theme_dark_secondary">#CCC2DC</color>
-    <color name="md_theme_dark_onSecondary">#332D41</color>
-    <color name="md_theme_dark_secondaryContainer">#4A4458</color>
-    <color name="md_theme_dark_onSecondaryContainer">#E8DEF8</color>
-    <color name="md_theme_dark_tertiary">#EFB8C8</color>
-    <color name="md_theme_dark_onTertiary">#492532</color>
-    <color name="md_theme_dark_tertiaryContainer">#633B48</color>
-    <color name="md_theme_dark_onTertiaryContainer">#FFD8E4</color>
+    <!-- Secondary Colors -->
+    <color name="md_theme_light_secondary">#4A6363</color>
+    <color name="md_theme_light_onSecondary">#FFFFFF</color>
+    <color name="md_theme_light_secondaryContainer">#CDE8E8</color>
+    <color name="md_theme_light_onSecondaryContainer">#061F20</color>
+
+    <!-- Tertiary Colors -->
+    <color name="md_theme_light_tertiary">#456179</color>
+    <color name="md_theme_light_onTertiary">#FFFFFF</color>
+    <color name="md_theme_light_tertiaryContainer">#CCE5FF</color>
+    <color name="md_theme_light_onTertiaryContainer">#001E32</color>
+
+    <!-- Error Colors -->
+    <color name="md_theme_light_error">#BA1A1A</color>
+    <color name="md_theme_light_errorContainer">#FFDAD6</color>
+    <color name="md_theme_light_onError">#FFFFFF</color>
+    <color name="md_theme_light_onErrorContainer">#410002</color>
+
+    <!-- Surface Colors -->
+    <color name="md_theme_light_background">#F4FFFE</color>
+    <color name="md_theme_light_onBackground">#161D1D</color>
+    <color name="md_theme_light_surface">#F4FFFE</color>
+    <color name="md_theme_light_onSurface">#161D1D</color>
+    <color name="md_theme_light_surfaceVariant">#DAE5E4</color>
+    <color name="md_theme_light_onSurfaceVariant">#3F4947</color>
+
+    <!-- Outline Colors -->
+    <color name="md_theme_light_outline">#6F7977</color>
+    <color name="md_theme_light_outlineVariant">#BEC9C8</color>
+
+    <!-- Dark Theme Colors -->
+    <color name="md_theme_dark_primary">#80D6D6</color>
+    <color name="md_theme_dark_onPrimary">#003535</color>
+    <color name="md_theme_dark_primaryContainer">#004F4F</color>
+    <color name="md_theme_dark_onPrimaryContainer">#9CF2F2</color>
+
+    <color name="md_theme_dark_secondary">#B1CCCC</color>
+    <color name="md_theme_dark_onSecondary">#1C3535</color>
+    <color name="md_theme_dark_secondaryContainer">#324B4B</color>
+    <color name="md_theme_dark_onSecondaryContainer">#CDE8E8</color>
+
+    <color name="md_theme_dark_tertiary">#8FCBFF</color>
+    <color name="md_theme_dark_onTertiary">#002538</color>
+    <color name="md_theme_dark_tertiaryContainer">#27495C</color>
+    <color name="md_theme_dark_onTertiaryContainer">#001E32</color>
+
+    <color name="md_theme_dark_background">#0E1515</color>
+    <color name="md_theme_dark_onBackground">#DEE4E4</color>
+    <color name="md_theme_dark_surface">#0E1515</color>
+    <color name="md_theme_dark_onSurface">#DEE4E4</color>
+    <color name="md_theme_dark_surfaceVariant">#404B49</color>
+    <color name="md_theme_dark_onSurfaceVariant">#BEC9C8</color>
+
+    <!-- Error Colors -->
     <color name="md_theme_dark_error">#FFB4AB</color>
     <color name="md_theme_dark_onError">#690005</color>
     <color name="md_theme_dark_errorContainer">#93000A</color>
     <color name="md_theme_dark_onErrorContainer">#FFDAD6</color>
-    <color name="md_theme_dark_background">#1C1B1F</color>
-    <color name="md_theme_dark_onBackground">#E6E1E5</color>
-    <color name="md_theme_dark_surface">#1C1B1F</color>
-    <color name="md_theme_dark_onSurface">#E6E1E5</color>
-    <color name="md_theme_dark_surfaceVariant">#49454F</color>
-    <color name="md_theme_dark_onSurfaceVariant">#CAC4D0</color>
-    <color name="md_theme_dark_outline">#938F99</color>
-    <color name="md_theme_dark_outlineVariant">#49454F</color>
+
+    <!-- Outline Colors -->
+    <color name="md_theme_dark_outline">#899390</color>
+    <color name="md_theme_dark_outlineVariant">#404B49</color>
+
+    <!-- Custom App Colors -->
+    <color name="success_green">#4CAF50</color>
+    <color name="warning_orange">#FF9800</color>
+    <color name="map_marker_visited">#4CAF50</color>
+    <color name="map_marker_pending">#FF9800</color>
+    <color name="map_marker_default">#006A6A</color>
+    <color name="lb_gold">#FFD54F</color>
+    <color name="lb_silver">#B0BEC5</color>
+    <color name="lb_bronze">#B87333</color>
+    <color name="marker_halo">#66FFFFFF</color>
+
+    <!-- Legacy Support -->
+    <color name="colorPrimary">@color/md_theme_light_primary</color>
+    <color name="colorPrimaryVariant">@color/md_theme_light_primaryContainer</color>
+    <color name="colorOnPrimary">@color/md_theme_light_onPrimary</color>
+    <color name="colorAccent">@color/md_theme_light_secondary</color>
+
+    <!-- Futuristic Neon Colors -->
+    <color name="fx_bg_start">#0B0F17</color>
+    <color name="fx_bg_end">#141E30</color>
+    <color name="fx_glass_tint">#26FFFFFF</color>
+    <color name="fx_neon_cyan">#00E5FF</color>
+    <color name="fx_neon_purple">#9D4EDD</color>
+    <color name="fx_neon_pink">#FF3D81</color>
+    <color name="fx_neon_green">#3DFFB5</color>
 </resources>
